--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -6,7 +6,7 @@ sites:
   - name: Google
     url: https://www.google.com
   - name: MyMooly
-    url: https://mymooly.ocm
+    url: https://mymooly.com
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
@@ -15,8 +15,8 @@ status-website:
   baseUrl: /upptime
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name: Upptime
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  introTitle: "**Upptime** is the open-source uptime monitor and status page."
+  introMessage: Hello
   navbar:
     - title: Status
       href: /
